@@ -1,3 +1,9 @@
+2007-04-26  Joe English  <jenglish@users.sourceforge.net>
+
+	* macosx/ttkMacOSXTheme.c: Merged OFFSET_RECT processing into 
+	BoxToRect(); factored out PatternOrigin; resynchronized
+	with Tile codebase.
+
 2007-04-26  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	*** 8.5a6 TAGGED FOR RELEASE ***
